2008-02-21  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
	(ruth_CPPFLAGS): Set to $(USER_CPPFLAGS).
	(ruth_CFLAGS): New variable.
	(ruth_LDFLAGS): Set to $(USER_LDFLAGS).
	(ruth_LDADD): Set to $(USER_LDADD).

2008-02-20  Neal H. Walfield  <neal@gnu.org>

	* ruth.c: Include <hurd/anonymous.h>, <stdlib.h> and <l4.h>.
	(main): Add tests to check rendered regions and discardable pages.

2008-02-13  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of storage_alloc to be consistent with
	new API.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (program_name): Change type to char *.

2008-02-11  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): When checking the ability to get and set an
	activity's policy, don't use the main activity.  Instead, allocate
	a new activity and use that.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of rm_cap_read to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* ruth.c (main): Update use of rm_cap_read to be consistent with
	new API.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* README: Update.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (ARCH_SOURCES): Remove variable.
	(ruth_SOURCES): Set to ruth.c.
	(COMMON_CPPFLAGS): Remove -I$(top_builddir)/newlib/include, add
	-I$@LIBC@/include.
	* output.c: Move to ../libc-parts/s_printf.c.
	* output.h: Remove file.
	* panic.c: Move to ../libc-parts/panic.c.
	* ruth.h: Remove file.
	* malloc.c: Likewise.
	* malloc-wrap.c: Likewise.
	* ia32-cmain.c: Move to ../libc-parts/ia32-cmain.c.
	* ia32-crt0.S: Move to ../libc-parts/ia32-crt0.S.
	* ruth.c: Include <stdio.h>.  Don't include "ruth.h".
	(output_debug): Declare, don't define.
	(exit): Remove function.
	(abort): Likewise.
	(getpagesize): Likewise.

2008-01-24  Neal H. Walfield  <neal@gnu.org>

	* output.h (putchar): Rename from this...
	(s_putchar): ... to this.
	(puts): Rename from this...