@@ -1,3 +1,8 @@
+2008-03-01  Neal H. Walfield  <neal@gnu.org>
+
+	* ruth.c Include <signal.h>.
+	(main): Test signal signal implementation.
+
 2008-02-21  Neal H. Walfield  <neal@gnu.org>
 
 	* Makefile.am (COMMON_CPPFLAGS): Remove variable.
